fix: add margin to footer for improved spacing

--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ body {
   color: var(--c-accent-yellow);
 }
 
+footer {
+  margin: 1rem;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
